deleted some entities and made soms new tests